--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -84,3 +84,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+button, input {
+  color: var(--color-text);
+  background-color: var(--color-background-soft);
+  border: var(--color-border) solid 2px;
+}
